--- a/index.html
+++ b/index.html
@@ -7,15 +7,15 @@
     <script src="https://code.jquery.com/jquery-3.5.1.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/fastclick/1.0.6/fastclick.js"></script>
     <script src="jquery.fullpage.js"></script>
-    <title>Enkh-Amar</title>
+    <title>UBlockchain Summit</title>
 </head>
 <body>
     <div class="container">
         <nav class="navbar">
             <ul>
                 <li><a href="#home">Home</a></li>
-                <li><a href="#about">About</a></li>
-                <li><a href="#projects">Projects</a></li>
+                <li><a href="#conferences">Conferences</a></li>
+                <li><a href="#features">Features</a></li>
                 <li><a href="#contact">Contact</a></li>
             </ul>
         </nav>
@@ -24,11 +24,11 @@
             <h1>Welcome To My Site</h1>
             <p><span>&#128071</span> Please scroll down <span>&#128071</span></p>
         </section>
-        <section id="about">
+        <section id="conferences">
             <h1>About Me</h1>
-            <p>My name is Enkh-Amar. I am full-stack web developer and entrepreneur.</p>
+            <p style="color: black;">My name is Enkh-Amar. I am full-stack web developer and entrepreneur.</p>
         </section>
-        <section id="projects">
+        <section id="features">
             <h1>Projects</h1>
             <p>Currently, I do not have any projects to show. &#128517</p>
         </section>
